fixing spacing error

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -2516,7 +2516,8 @@
   }
 
   .bottomWaitlist {
-    padding: 4rem 1rem;
+    padding: 2rem 1rem;
+    margin-top: -4rem;
   }
 
   .bottomWaitlistTitle {
